--- a/client/src/App.css
+++ b/client/src/App.css
@@ -314,6 +314,11 @@ body, html {
   cursor: pointer;
 }
 
+.track img {
+  width: 100%;
+  height: 100%;
+}
+
 .current {
   margin-bottom: 77px;
   display: flex;
