--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,30 @@ body, html {
   gap: 20px;
 }
 
+.button {
+  padding: 125px;
+  border: 1px solid rgba(54, 54, 54, 0.6);
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+
+  border-radius: 16px;
+  overflow: hidden;
+  transition: .3 ease-in-out;
+}
+
+.button-primary {
+  background: linear-gradient(90.29deg, #AA076B 2.13%, #61045F 86.88%);
+}
+
+.button > .hero-solid {
+  width: 30px;
+  height: 30px;
+}
+
 /* Nav */
 .nav {
   width: 100%;
@@ -95,12 +119,21 @@ body, html {
 	text-decoration: none;
 }
 
+/* Home */
+.home-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
 /* Login */
 .login-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 50px;
 }
 
 .login-xl {
@@ -158,11 +191,32 @@ body, html {
 .login-dev {
   position: absolute;
   bottom: 40px;
-  opacity: 0.2;
+
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
 }
 
 .login-dev a {
-  color: #fff;
+  color: #AA076B;
+  transition: .2s ease-in-out;
+}
+
+.login-dev a:hover {
+  text-decoration: underline;
+}
+
+.login-dev-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.login-profile {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
 }
 
 /* Header */
@@ -279,9 +333,9 @@ body, html {
   width: 100%;
 }
 
-.showcase-wrapper {
-  /* margin-top: 70px; */
-}
+/* .showcase-wrapper {
+  margin-top: 70px;
+} */
 
 .tracks-overflow {
   overflow-x: hidden;
@@ -402,7 +456,8 @@ body, html {
 }
 
 .promote-grid-item {
-  flex: 0 0 15%;
+  flex: 0 0 250px;
+  height: 250px !important;
   background: none;
   border: none;
   width: 200px;
@@ -488,7 +543,7 @@ body, html {
   color: #fff;
 }
 
-.accept-action {
+/* .accept-action { */
   /* border: none !important;
   cursor: pointer; */
 
@@ -505,7 +560,7 @@ body, html {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px; */
-}
+/* } */
 
 .accept-action {
   min-width: 130px;
@@ -538,8 +593,32 @@ body, html {
   background: rgba(54, 54, 54, 0.1);
 }
 
+.accept-primary {
+  border: 0;
+  background: linear-gradient(90.29deg, #AA076B 2.13%, #61045F 86.88%);
+}
+
+.accept-primary:hover {
+  background: linear-gradient(90.29deg, #AA076B 2.13%, #61045F 86.88%);
+}
+
 .active {
   background: rgba(54, 54, 54, 0.6);
+}
+
+/* Error */
+.error-wrapper {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.error-link {
+  color: #AA076B;
 }
 
 /* lg */
