--- a/client/src/Normalizer.css
+++ b/client/src/Normalizer.css
@@ -18,7 +18,7 @@ Use a better box model (opinionated).
 }
 
 /**
-Use a more readable tab size (opinionated).
+Use a more readable tjb size (opinionated).
 */
 
 html {
@@ -297,4 +297,14 @@ Add the correct display in Chrome and Safari.
 
 summary {
 	display: list-item;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+button {
+	background: none;
+	border: none;
 }
