--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -11,7 +11,7 @@ body, html {
   height: 100%;
   z-index: -10;
 
-  background-image: url("./assets/bg.jpg");
+  background-image: url("assets/bg.jpg");
   background-size: cover;
 }
 
