--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,10 +1,12 @@
 body, html {
-  /* height: 100%; */
 	font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: #eee;
+}
+
+body {
   background-image: url("assets/bg.jpg");
   background-size: cover;
-  background-color: #121212;
+  background-color: #0b1222;
 }
 
 .hero-solid {
@@ -29,7 +31,8 @@ body, html {
 }
 
 .button {
-  padding: 125px;
+  /* padding: 125px; */
+  min-height: 140px;
   border: 1px solid rgba(54, 54, 54, 0.6);
 
   display: flex;
@@ -55,6 +58,26 @@ body, html {
   filter: saturate(1.1);
 }
 
+/* .button-secondary {
+  border: 1px solid rgba(54, 54, 54, 0.6);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+
+  border-radius: 16px;
+  overflow: hidden;
+  transition: .3s ease-in-out;
+
+} */
+
+.button-secondary > .hero-solid {
+  width: 30px;
+  height: 30px;
+}
+
 .button > .hero-solid {
   width: 30px;
   height: 30px;
@@ -62,7 +85,7 @@ body, html {
 
 .super-button {
   width: 300px;
-  height: 300px;
+  height: 100px;
 }
 
 .backButton {
@@ -156,6 +179,14 @@ body, html {
   gap: 30px;
 }
 
+.home-group-primary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
 .trending-wrapper {
   width: 300px;
   min-height: 300px;
@@ -186,6 +217,11 @@ body, html {
 
   border-radius: 16px;
   overflow: hidden;
+  transition: .3s ease-in-out;
+}
+
+.trending-item:hover {
+  border: 1px solid rgba(90, 90, 90, 0.6);
 }
 
 .trending-content {
@@ -224,6 +260,8 @@ body, html {
 
 /* Login */
 .login-wrapper {
+  padding: 0 20px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -451,6 +489,7 @@ body, html {
 
 .tracks-overflow {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .tracks-list {
@@ -477,11 +516,26 @@ body, html {
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
+  cursor: pointer;
 }
 
 .track img {
   width: 100%;
   height: 100%;
+}
+
+.bar {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+}
+
+.fill {
+  width: 0%;
+  height: 100%;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 .current {
