--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -119,6 +119,20 @@ body {
   align-items: center;
 }
 
+.home-button {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(54, 54, 54, 0.6);
+  border-radius: 50%;
+  transition: border .2s ease-in-out;
+  cursor: pointer;
+}
+
+.home-button:hover {
+  border: 1px solid rgba(90, 90, 90, 0.6);
+}
+
 .profile {
 	display: flex;
 	flex-direction: row;
@@ -138,7 +152,6 @@ body {
 	-moz-border-radius: 50%;
 	-ms-border-radius: 50%;
 	-o-border-radius: 50%;
-	cursor: pointer;
   object-fit: cover;
 }
 
@@ -168,12 +181,17 @@ body {
 	line-height: 14px;
 	text-align: left;
 	text-decoration: none;
+  transition: .2s ease-in-out;
+}
+
+.author-link:hover {
+  text-decoration: underline;
 }
 
 /* Home */
 .home-group {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
   gap: 30px;
@@ -680,6 +698,7 @@ body {
 
 .promote-grid-item img {
   width: 100%;
+  height: 100%;
 }
 
 .selected {
@@ -741,33 +760,13 @@ body {
   color: #fff;
 }
 
-/* .accept-action { */
-  /* border: none !important;
-  cursor: pointer; */
-
-  /* padding: 5px 10px;
-  color: #222;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px; */
-/* } */
-
 .accept-action {
   min-width: 130px;
   min-height: 45px;
 
   color: #fff;
-  background: transparent;
+  /* background: transparent; */
   border: 1px solid rgba(54, 54, 54, 0.6);
-  outline: none;
 
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
@@ -782,15 +781,15 @@ body {
   opacity: 1;
   cursor: pointer;
 
-  transition: .3s ease-in-out;
-  -webkit-transition: .3s ease-in-out;
-  -moz-transition: .3s ease-in-out;
-  -ms-transition: .3s ease-in-out;
-  -o-transition: .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
 }
 
 .accept-action:hover {
-  background: rgba(54, 54, 54, 0.1);
+  border: 1px solid rgba(90, 90, 90, 0.6);
 }
 
 .button-sm {
@@ -816,6 +815,7 @@ body {
 }
 
 .accept-primary:hover {
+  border: none;
   background: linear-gradient(90.29deg, #AA076B 2.13%, #61045F 86.88%);
   filter: saturate(1.2);
 }
